packages/vue-component-library/src/styles/default/_block-staff-article-item.scss
.block-staff-article-item {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-content: center;
  align-items: center;
  width: 100%;
  position: relative;

  margin-bottom: var(--space-xl);
  padding-bottom: var(--space-xl);

  .image {
    width: 50%;
    margin-right: var(--space-xl);
  }

  .molecule-no-image {
    width: 50%;
    height: 272px;
    margin-right: var(--space-xl);
    background: var(--gradient-01);
    overflow: hidden;
    display: flex;
    align-items: center;
    position: relative;

    .molecule {
      flex-shrink: 0;
      position: absolute;
      opacity: 0.7;
    }
  }

  .meta {
    width: calc(50% - var(--space-xl));
  }

  .category {
    @include overline;
    color: var(--color-primary-blue-05);
    margin-bottom: var(--space-s);
  }

  .title {
    @include step-1;
    color: var(--color-primary-blue-03);
    margin-bottom: var(--space-s);
    @include truncate(3);
    @include card-clickable-area;
  }

  .byline {
    @include step-0;
    margin: var(--space-s) 0;
    color: var(--color-secondary-grey-04);
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
  }

  .description {
    @include step-0;
    color: var(--color-black);
  }

  .description-summary-only {
    @include step-0;
    color: var(--color-black);
  }

  :deep(.image) {
    height: 272px;

    .media {
      object-fit: cover;
    }
  }

  // Hovers
  @media #{$has-hover} {
    .title:hover {
      @include link-hover;
    }
  }
}

// Breakpoints
@media #{$small} {
  .block-staff-article-item {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;

    .image,
    .molecule-no-image {
      width: 100%;
      margin-right: 0;
      margin-bottom: var(--space-l);
    }

    .meta {
      width: 100%;
      height: 100%;

      >*:last-child {
        padding-bottom: 0;
        margin-bottom: 0;
      }
    }
  }
}

